<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white"
    tools:context=".ui.main.MainFragment">

    <include android:id="@+id/Main.Toolbar"
        layout="@layout/toolbar"
        
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@id/Main.Toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="15dp"
            android:layout_marginStart="10dp"

            android:text="@string/categories"
            android:textAppearance="@style/Text.Header.1"
            android:textColor="@color/black" />

        <androidx.cardview.widget.CardView
            android:id="@+id/Main.Fractals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"

                    app:tint="@color/white"
                    android:src="@drawable/ic_snow_flake"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    android:layout_marginStart="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Main.Fractals.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/fractals_title"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textAppearance="@style/Text.Paragraph.4"
                        android:textColor="@color/light_gray"/>

                    <TextView
                        android:id="@+id/Main.Fractals.Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"


                        android:text="@string/fractals_description"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textAppearance="@style/Text.Header.3"
                        android:textColor="@color/white"/>

                </LinearLayout>



            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/Main.ImageColoring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"

                    app:tint="@color/white"
                    android:src="@drawable/ic_paint"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    android:layout_marginStart="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Main.ImageColoring.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/imagecoloring_title"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textAppearance="@style/Text.Paragraph.4"
                        android:textColor="@color/light_gray"/>

                    <TextView
                        android:id="@+id/Main.ImageColoring.Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"


                        android:text="@string/imagecoloring_description"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textAppearance="@style/Text.Header.3"
                        android:textColor="@color/white"/>

                </LinearLayout>



            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/Main.Transitions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"

                    app:tint="@color/white"
                    android:src="@drawable/ic_instruments"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    android:layout_marginStart="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Main.Transitions.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/transitions_title"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textAppearance="@style/Text.Paragraph.4"
                        android:textColor="@color/light_gray"/>

                    <TextView
                        android:id="@+id/Main.Transitions.Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"


                        android:text="@string/transitions_description"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textAppearance="@style/Text.Header.3"
                        android:textColor="@color/white"/>

                </LinearLayout>



            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    

</androidx.constraintlayout.widget.ConstraintLayout>